Fix overflow of book items

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 .main-container {
   height: 75vh;
+  overflow: hidden;
 }
 
 header {
